.gitignoreの更新: ビルド、カバレッジ、環境変数ファイル、ロックファイルを追加

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,12 @@ node_modules
 dist
 dist-ssr
 *.local
+build
+coverage
+.env
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
 
 # Editor directories and files
 .vscode/*
