--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ VITE_FIREBASE_PROJECT_ID=your_project_id
 VITE_FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
 VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 VITE_FIREBASE_APP_ID=your_app_id
+
+# Chatbot
+OpenAI_API_KEY=your_openai_api_key
+Gemini_API_KEY=your_gemini_api_key
+Claude_API_KEY=your_claude_api_key
