--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+firebase-debug.log
 
 node_modules
 dist
@@ -14,6 +15,10 @@ dist-ssr
 build
 coverage
 .env
+.env.local
+.env.*.local
+.env.*
+.firebase/
 package-lock.json
 yarn.lock
 pnpm-lock.yaml
